[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "our_diffusion_napde"
version = "0.1"
description = ""
readme = ""
requires-python = ">=3.11"
# If you want to specify the author, license, etc., add them here.

# This will be filled from requirements.txt below
dependencies = [
    "torch>=1.12",
    "torchmetrics",
    "einops",
    "obspy",
    "xgboost", 
    "matplotlib",
    "pandas",
    "numpy",
    "scipy",
    "tqdm",
    "diffusers", 
    "scikit-learn",
    "accelerate",
    "wandb"
]

[project.scripts]
run-train = "training.train:main"
run-diffusion = "diffusion.generate_diffusion:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

